--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,4 +3,4 @@ MONGO_URI=mongodb://root:0f5pMWmGJndLb43pf9gsG7b4uncOcG@mongo:27017/games_hub?au
 JWT_SECRET=change_me
 # Frontend served by Nginx (6603) and direct frontend (6600) during dev
 CORS_ORIGIN=http://localhost:6600,http://localhost:6603
-# Token expira em 24h por padrão no código
+# Token expira em 3 dias por padrão no código
