--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,12 +7,16 @@ http {
   default_type  application/octet-stream;
   sendfile        on;
   keepalive_timeout  65;
+  underscores_in_headers on;
 
   upstream frontend {
     server frontend:80;
   }
   upstream backend {
     server backend:4000;
+  }
+  upstream wordme_backend {
+    server wordme_backend:4100;
   }
 
   server {
@@ -21,6 +25,17 @@ http {
 
     location /api/ {
       proxy_pass http://backend/api/;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection 'upgrade';
+      proxy_set_header Host $host;
+      proxy_cache_bypass $http_upgrade;
+    }
+
+    # Wordme game API (served under /api/wordme/)
+    location /api/wordme/ {
+      # preserve prefix when proxying
+      proxy_pass http://wordme_backend/api/wordme/;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection 'upgrade';
