--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - MONGO_INITDB_DATABASE=games_hub
     container_name: gameshub-mongo
     ports:
-      - "27017:27017"
+      - "${MONGO_HOST_PORT:-27017}:27017"
     volumes:
       - mongo_data_auth:/data/db
   backend:
@@ -16,12 +16,12 @@ services:
     container_name: gameshub-backend
     restart: unless-stopped
     ports:
-      - "6601:4000"
+      - "${BACKEND_HOST_PORT:-6601}:${BACKEND_PORT:-4000}"
     environment:
-      - PORT=4000
+      - PORT=${BACKEND_PORT:-4000}
       - MONGO_URI=mongodb://root:0f5pMWmGJndLb43pf9gsG7b4uncOcG@mongo:27017/games_hub?authSource=admin
       - JWT_SECRET=${JWT_SECRET:-change_me}
-      - CORS_ORIGIN=http://localhost:6600,http://localhost:6603
+      - CORS_ORIGIN=http://localhost:${FRONTEND_HOST_PORT:-6600},http://localhost:${NGINX_HOST_PORT:-6603}
     depends_on:
       - mongo
   frontend:
@@ -29,7 +29,7 @@ services:
     container_name: gameshub-frontend
     restart: unless-stopped
     ports:
-      - "6600:80"
+      - "${FRONTEND_HOST_PORT:-6600}:80"
     depends_on:
       - backend
   mongo-express:
@@ -43,18 +43,33 @@ services:
       - ME_CONFIG_BASICAUTH_USERNAME=superadmin@games_hub.com
       - ME_CONFIG_BASICAUTH_PASSWORD=0f5pMWmGJndLb43pf9gsG7b4uncOcG
     ports:
-      - "6602:8081"
+      - "${MONGOEXPRESS_HOST_PORT:-6602}:8081"
     container_name: gameshub-mongo-express
     depends_on:
       - mongo
   nginx:
     build: ./nginx
     ports:
-      - "6603:80"
+      - "${NGINX_HOST_PORT:-6603}:80"
     container_name: gameshub-nginx
     restart: unless-stopped
     depends_on:
       - frontend
       - backend
+  wordme_backend:
+    build: ./wordme/backend
+    container_name: gameshub-wordme-backend
+    restart: unless-stopped
+    environment:
+      - PORT=${WORDME_BACKEND_PORT:-4100}
+      - WORDME_MONGO_URI=mongodb://root:0f5pMWmGJndLb43pf9gsG7b4uncOcG@mongo:27017/wordme-games_hub?authSource=admin
+      - AUTH_SERVICE_URL=http://backend:4000
+      - JWT_SECRET=${JWT_SECRET:-change_me}
+      - CORS_ORIGIN=http://localhost:${FRONTEND_HOST_PORT:-6600},http://localhost:${NGINX_HOST_PORT:-6603}
+    depends_on:
+      - mongo
+      - backend
+    ports:
+      - "${WORDME_BACKEND_HOST_PORT:-6610}:${WORDME_BACKEND_PORT:-4100}"
 volumes:
   mongo_data_auth:
