--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -7,6 +7,7 @@ http {
   default_type  application/octet-stream;
   sendfile        on;
   keepalive_timeout  65;
+  underscores_in_headers on;
 
   server {
     listen 80;
@@ -15,6 +16,17 @@ http {
   # Static frontend
     root /usr/share/nginx/html;
     index index.html;
+
+    # Wordme API when accessing the frontend directly on :6600
+    location /api/wordme/ {
+      # preserve prefix when proxying
+      proxy_pass http://wordme_backend:4100/api/wordme/;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection 'upgrade';
+      proxy_set_header Host $host;
+      proxy_cache_bypass $http_upgrade;
+    }
 
     location /api/ {
       proxy_pass http://backend:4000/api/;
