--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "bootstrap-icons": "^1.11.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.3",
