adicionado visual do wordme

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -18,9 +18,10 @@ http {
     index index.html;
 
     # Wordme API when accessing the frontend directly on :6600
+    # Route to main backend's wordme routes
     location /api/wordme/ {
       # preserve prefix when proxying
-      proxy_pass http://wordme_backend:4100/api/wordme/;
+      proxy_pass http://backend:4000/api/wordme/;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection 'upgrade';
