commit página atualização e game wordme criado com sucesso

--- a/.env
+++ b/.env
@@ -1,16 +1,23 @@
-# Ports centralization
+# Ports centralization - only external (host) ports configured here.
 
-# Core services
-MONGO_HOST_PORT=27017
-BACKEND_PORT=4000
-BACKEND_HOST_PORT=6601
+# External host ports (map host:container)
+# Frontend (host) -> container 80
 FRONTEND_HOST_PORT=6600
-MONGOEXPRESS_HOST_PORT=6602
+
+# Main backend (host) -> container (default inside: 4000)
+BACKEND_HOST_PORT=6601
+
+# MongoDB host port (host) -> container 27017
+MONGO_HOST_PORT=6602
+
+# Mongo Express (web UI) - avoid conflict with mongo host port
+MONGOEXPRESS_HOST_PORT=6605
+
+# Nginx (host) -> container 80
 NGINX_HOST_PORT=6603
 
-# Wordme module
-WORDME_BACKEND_PORT=4100
-WORDME_BACKEND_HOST_PORT=6610
+# Wordme backend external port (host) -> container default (4100)
+WORDME_BACKEND_HOST_PORT=6004
 
-# Optional secrets (set your own in development/production)
+# Optional: keep JWT_SECRET commented here for convenience
 # JWT_SECRET=change_me
