--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,9 +15,9 @@ http {
   upstream backend {
     server backend:4000;
   }
-  # upstream wordme_backend {
-  #   server wordme_backend:4100;
-  # }
+  upstream wordme_backend {
+    server wordme_backend:4100;
+  }
 
   server {
     listen 80;
@@ -32,10 +32,9 @@ http {
       proxy_cache_bypass $http_upgrade;
     }
 
-    # Wordme game API (served under /api/wordme/) -> main backend
+    # Wordme game API -> wordme backend service
     location /api/wordme/ {
-      # preserve prefix when proxying
-      proxy_pass http://backend/api/wordme/;
+      proxy_pass http://wordme_backend/api/wordme/;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection 'upgrade';
