--- a/wordme/backend/package.json
+++ b/wordme/backend/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "seed:words5": "node src/push_words5.js"
+    "seed:words5": "node src/push_words5.js",
+    "seed:palavras": "node src/seed_palavras_aceitas.js"
   },
   "dependencies": {
     "axios": "^1.7.7",
@@ -16,7 +17,9 @@
     "express": "^4.19.2",
     "helmet": "^7.1.0",
     "mongoose": "^8.6.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nspell": "^2.0.0",
+    "dictionary-pt": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
